# nn_drons

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  run.sh
include/: drone.h  environment.h  neural_network.h  renderer.h  rl_trainer.h  swarm.h  vec3.h
src/: drone.cpp  environment.cpp  main.cpp  neural_network.cpp  renderer.cpp  rl_trainer.cpp  swarm.cpp
